--- a/omg/c.css
+++ b/omg/c.css
@@ -1,4 +1,4 @@
-.username::before{          background:url('https://implyingrigged.info/w/images/d/df/Vglg_icon.png');}
+.username::before{          background:url('https://images2.imgbox.com/a0/f5/ESeunKnt_o.png');}
 
 .username::before{
 	content:"AA";
